--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
   <body>
     <header>
-      <div class="logo">Thinkfulbnb</div>
+      <div class="logo item">Thinkfulbnb</div>
       <nav>
-        <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+        <ul id="menu" class="item">
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -35,71 +35,120 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form class="form">
+          <div class="form item">
+            <label for="location">Location</label>
+            <input type="text" name="location" id="location" placeholder="Search destination" >
+          </div>
+          <div class="form item">
+            <label for="arrival" >Arrival</label>
+            <input type="date" name="arrival" id="arrival" >
+          </div>
+          <div class="form item">
+            <label for="departure" >Departure</label>
+            <input type="date" name="departure" id="departure"  >
+          </div>
+          <div class="form item">
+            <label for="type" >Type</label>
+            <select name="type" id="type" value="1" >
+              <option value="">Apartment</option>
+              <option value="">Barn</option>
+              <option value="">Castle</option>
+              <option value="">Houseboat</option>
+              <option value="">Tiny House</option>
+              <option value="">Yacht</option>
+              <option value="">Yurt</option>
+            </select>
+          </div>
+          <button type="submit">Search</button>
+        </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
-
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
-
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
+        <div class="about group">
+          <div class="item">
+            <img
+              src="images/vacation-rental-pool.png"
+              alt="Thinkfulbnb - Vacation rental pool"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="images/vacation-rental-inside-stone.png"
+              alt="Thinkfulbnb - Vacation rental inside stone"
+            />
+          </div>
+          <div class="item-double">
+            <p>
+              Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+              fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+              porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+              neque, at tempus lorem. Aenean mi magna, posuere at quam sed,
+              euismod gravida neque.
+            </p>
+          </div>
+        </div>
       </section>
 
       <!-- Ideas -->
-      <section id="ideas">
+      <section id="ideas" class="group">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        <div class="row-1">
+          <div class="ideas item">
+            <h3>Forest retreats</h3>
+            <img
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+          </div>
+          <div class="ideas item">
+            <h3>Beaches</h3>
+            <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+          </div>
+        </div>
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        <di class="row-2">
+          <div class="ideas item">
+            <h3>Rustic cabins</h3>
+            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+          </div>
+          <div class="ideas item">
+            <h3>Pet-friendly</h3>
+            <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+          </div>
+        </div>
       </section>
 
       <!-- Host -->
       <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
-        </p>
-        <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
-        </ul>
-
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        <div class="host">
+          <div class="host-info item">
+            <h2>Want to Become a Thinkfulbnb Host?</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+              molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
+              Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
+              pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
+              libero rutrum vitae.
+            </p>
+            <ul>
+              <li>Mauris in pellentesque ligula.</li>
+              <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
+              <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+              <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
+              <li>
+                Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
+                hendrerit mauris.
+              </li>
+            </ul>
+          </div>
+          <div class="item">
+            <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+          </div>
+        </div>
       </section>
     </main>
 
